# windows-desktop-shortcut-cleaner

./: LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  codeql.yml  test.yml
src/: cleaner.py
